Modifications done, modified/adjusted search bar and its button, post message buttons alignment and size adjusted, sidebar like hover and other alignments with fixed comments profile picture alignment

--- a/css/hf_design.css
+++ b/css/hf_design.css
@@ -103,7 +103,7 @@
 }
 
 .comment_pic{
-    margin-left: 1em;
+    margin-left: 4em;
 }
 
 .message_view{
